// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeftSection should render its default content 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flex": "0 0 auto",
      "left": "0",
      "position": "sticky",
    }
  }
/>
`;

exports[`LeftSection should render the given cells 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flex": "0 0 auto",
      "left": "0",
      "position": "sticky",
    }
  }
>
  <React.Fragment
    key="leftSection-0"
  >
    <div>
      Cell A
    </div>
  </React.Fragment>
  <React.Fragment
    key="leftSection-1"
  >
    <div>
      Cell B
    </div>
  </React.Fragment>
  <React.Fragment
    key="leftSection-2"
  >
    <div>
      Cell C
    </div>
  </React.Fragment>
</div>
`;
